# llm-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  langgraph.json  pyproject.toml  requirements.txt  test_chat.py
config/: .gitkeep
data/: .gitkeep
scripts/: demo.py  local_cleanup.py  local_setup.py  seed_data.py  test_double_texting.py
src/: __init__.py  agent.py  container.py  prompts.py  state.py
src/config/: env.py  logger.py
src/constants/: __init__.py  appointment_types.py  config_keys.py
src/db/: __init__.py  database.py  seed.py
src/domain/: appointment.py  branch.py  calendar.py  category.py  client.py  conversation.py  message.py  service.py  session.py  system_config.py  user.py
src/memory/: __init__.py  long_term.py  short_term.py  total.py
src/models/: __init__.py  appointment.py  branch.py  calendar.py  client.py  conversation.py  service.py  user.py
src/repositories/interfaces/: appointment_repository.py  branch_repository.py  calendar_repository.py  category_repository.py  client_repository.py  conversation_repository.py  service_repository.py  session_repository.py  system_config_repository.py  user_repository.py
src/repositories/sqlite/: appointment_repository.py  branch_repository.py  calendar_repository.py  category_repository.py  client_repository.py  connection.py  conversation_repository.py  factory.py  service_repository.py  session_repository.py  system_config_repository.py  user_repository.py
src/tools/: __init__.py  appointments.py  availability.py  calendar_integration.py  calendar_tool.py  services.py  user.py
